--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+src/main/resources/data/employee/*.byte
+src/main/resources/data/feedback/*.byte
 .idea
 target
 
@@ -24,3 +26,10 @@ target
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+
+
+
+
+
+
