--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,9 @@
       <artifactId>springfox-swagger-ui</artifactId>
       <version>3.0.0</version>
     </dependency>
+    <dependency> <groupId>io.springfox</groupId>
+      <artifactId>springfox-boot-starter</artifactId>
+      <version>3.0.0</version> </dependency>
     <dependency>
       <groupId>org.apache.ant</groupId>
       <artifactId>ant</artifactId>
