--- a/pom.xml
+++ b/pom.xml
@@ -75,18 +75,33 @@
     <dependency>
       <groupId>io.springfox</groupId>
       <artifactId>springfox-swagger2</artifactId>
-      <version>3.0.0</version>
+      <version>2.9.2</version>
     </dependency>
     <dependency>
       <groupId>io.springfox</groupId>
       <artifactId>springfox-swagger-ui</artifactId>
-      <version>3.0.0</version>
+      <version>2.9.2</version>
     </dependency>
-    <dependency> <groupId>io.springfox</groupId>
-      <artifactId>springfox-boot-starter</artifactId>
-      <version>3.0.0</version> </dependency>
+    <!--  https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-ui  -->
+    <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-ui</artifactId>
+      <version>1.6.9</version>
+    </dependency>
 
-<!--     <dependency> <groupId>javax.validation</groupId>-->
+    <!--    <dependency> <groupId>io.springfox</groupId>-->
+<!--      <artifactId>springfox-boot-starter</artifactId>-->
+<!--      <version>3.0.0</version> </dependency>-->
+
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>4.3.1</version>
+      <scope>test</scope>
+    </dependency>
+
+
+    <!--     <dependency> <groupId>javax.validation</groupId>-->
 <!--      <artifactId>validation-api</artifactId>-->
 <!--      <version>1.1.0.Final</version> </dependency>-->
 
@@ -96,11 +111,6 @@
       <version>1.8.1</version>
     </dependency>
 
-    <dependency>
-      <groupId>org.springdoc</groupId>
-      <artifactId>springdoc-openapi-ui</artifactId>
-      <version>1.6.9</version>
-    </dependency>
 
   </dependencies>
 
